add fuzzel functionality (and lose app icons gotta vibe-fix that some other day)

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -125,7 +125,7 @@ bind = $mod, 3, exec, $shell_commands_path/get_random_swag.nu "idontgiveaswag"
 bind = $mod, 2, exec, hyprctl dispatch sendshortcut "CTRL,C,"; $shell_commands_path/get_random_swag.nu "$(wl-paste)" && hyprctl dispatch sendshortcut "CTRL,V,"
 bind = $mod, 7, exec, hyprctl dispatch sendshortcut "CTRL,C,"; $shell_commands_path/transform_gemini.nu semi "$(wl-paste)"
 bind = $mod, 1, fullscreen
-bind = $mod, W, exec, $app_picker --show drun
+bind = $mod, W, exec, /home/afkara/.config/hypr/fuzzel-pick
 
 bind = SUPER_SHIFT, S, exec, wayfreeze & PID=$!; sleep .1; grimshot copy area; kill $PID
 
